# gl_gameslib_examples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_all_examples_playdate_device.bat  build_all_examples_playdate_device.sh  build_all_examples_playdate_sim.bat  build_all_examples_playdate_sim.sh  build_all_examples_sdl3.bat  build_all_examples_sdl3.sh  build_my_game_playdate_device.bat  build_my_game_playdate_device.sh  build_my_game_playdate_sim.bat  build_my_game_playdate_sim.sh  build_my_game_sdl3.bat  build_my_game_sdl3.sh
Examples/fonts/src/: Main.c
Examples/formula_1/src/: commonvars.c  commonvars.h  game.c  intro.c  main.c  maingameloop.c  printfuncs.c  printfuncs.h  savestate.c  savestate.h  sound.c  sound.h
Examples/images/src/: Main.c
Examples/rects/Source/: pdxinfo
Examples/rects/src/: Main.c
buildsupport/playdate/: common.mk  playdate.cmake  playdate_game.cmake
my_game/src/: Main.c
